--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,6 @@ h2{
 .disp{
       display: flex;
       justify-content: flex-start;
-      flex-direction: column;
       flex-wrap: wrap;
 
 }
@@ -41,16 +40,18 @@ i{
 }
 .card{
       width: 20em;
-      height: 20em;
+      height: 23em;
       display:flex;
       justify-content: flex-start;
      align-items: flex-start;
       flex-direction: column;
       padding:1em;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      margin: 2em;
 }
 .card img{
       width:90%;
       height:80%;
       border-radius: 20px;
+      margin:auto;
 }
