--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,11 +47,14 @@ i{
       flex-direction: column;
       padding:1em;
       box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-      margin: 2em;
+      margin: 1em;
 }
 .card img{
       width:90%;
       height:80%;
       border-radius: 20px;
+      margin:auto;
+}
+#popular{
       margin:auto;
 }
