--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ h2{
 }
 i{
       font-size: 1.5em;
-      color: red;
+      cursor: pointer;
 
 }
 .card{
@@ -63,7 +63,14 @@ h3{
       width: fit-content;
       height: fit-content;
 }
-h3:hover{
+h3{
       color:white;
       background-color: rgb(255, 0, 111);
+}
+#popular,#new,#local{
+      margin-top: 5em;
+}
+.active{
+      color: rgb(255, 0, 111);
+      font-weight: bold;
 }
